syntax = "proto3";

option csharp_namespace = "ProfileApi.Protos";
package profileapi;

service ProfileManager {
  rpc GetAllProfiles (Empty) returns (ProfileList);
  rpc GetProfile (ProfileId) returns (Profile);
  rpc CreateProfile (Profile) returns (Profile);
  rpc UpdateProfile (Profile) returns (Empty);
  rpc DeleteProfile (ProfileId) returns (Empty);
}

message Profile {
  int32 id = 1;
  string name = 2;
  string photo = 3;
  string email = 4;
  string passwordHash = 5;
  string sex = 6;
  string nickname = 7;
}

message ProfileList {
  repeated Profile profiles = 1;
}

message ProfileId {
  int32 id = 1;
}

message Empty {}
